[add,fix] mods.tomlの修正。メインクラスのひな型を記述
この状態でMinecraftを起動するとModが認識されている状態

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -23,7 +23,7 @@ displayName="Biwako Mod" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="https://github.com/Hiroya-W/biwakoMC" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="assets/biwako_mod/logo.png" #optional
+logoFile="logo.png" #optional
 # A text field displayed in the mod UI
 ## credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
